# culture-engine

./: .gitignore  pyproject.toml
docs/: mvp.md  product-brief.md  working_notes.md
docs/adr/: 001-mvp-design.md  002-useFastAPI-for-backendAPI  003-mvp-UI-technology  004-postgreSQL-as-database  005-external_api-TMDB
docs/architecture/: mvp-api-design.md  mvp-architecture  mvp-data-model.md
docs/mvp/: user-journeys.md
src/culture_engine/: __main__.py  app.py  exceptions.py  film_service.py  tmdb_client.py
src/culture_engine/models/: film.py
tests/: test_film_service.py  test_tmdb_client.py
