[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "culture-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",    
    "pydantic",
    "python-dotenv",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]